--- a/eam/view/view-eam/src/main/resources/public/business/eam/operate/operate_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/operate/operate_list.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
- * 变更明细 列表页 JS 脚本
+ * 资产操作 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-09-26 17:10:21
+ * @since 2021-09-26 20:02:18
  */
  -->
  <!DOCTYPE html>
@@ -11,7 +11,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8"/>
-    <title th:text="${lang.translate('变更明细')}">变更明细</title>
+    <title th:text="${lang.translate('资产操作')}">资产操作</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/assets/libs/layui/css/layui.css" th:href="'/assets/libs/layui/css/layui.css?'+${cacheKey}"/>
     <link rel="stylesheet" href="/assets/css/admin.css" th:href="'/assets/css/admin.css?'+${cacheKey}"/>
@@ -20,17 +20,14 @@
     <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
     <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>
     <style>
-        .layui-card-body .layui-table {
-            margin:0px;
-        }
     </style>
 </head>
 
 <body style="overflow-y: hidden">
 
-<div class="layui-card-no-shadow ">
+<div class="layui-card">
  
-    <div class="layui-card-body" style="padding:0px">
+    <div class="layui-card-body" style="">
 
         <div class="search-bar" style="">
 
@@ -38,17 +35,19 @@
                 <!-- 搜索输入区域 -->
                 <div class="layui-form toolbar search-inputs">
                     <!-- 主键 , id ,typeName=text_input, isHideInSearch=true -->
-                    <!-- 变更类型 , businessType ,typeName=select_box, isHideInSearch=true -->
-                    <!-- 变更号 , businessCode ,typeName=text_input, isHideInSearch=true -->
-                    <!-- 资产 , assetId ,typeName=text_input, isHideInSearch=true -->
-                    <!-- 变更人 , changeUserId ,typeName=text_input, isHideInSearch=true -->
-                    <!-- 变更时间 , changeTime ,typeName=date_input, isHideInSearch=true -->
-                    <!-- 变更内容 , content ,typeName=text_input, isHideInSearch=false -->
+                    <!-- 名称 , name ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('变更内容')}" class="search-label content-label">变更内容</span><span class="search-colon">:</span></div>
-                        <input id="content" class="layui-input search-input" style="width: 140px" type="text" />
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('名称')}" class="search-label name-label">名称</span><span class="search-colon">:</span></div>
+                        <input id="name" class="layui-input search-input" style="width: 140px" type="text" />
                     </div>
-                    <!-- 备注 , notes ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 分配编号 , allocateCode ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 操作编码 , operateCode ,typeName=select_box, isHideInSearch=true -->
+                    <!-- 审批 , approval ,typeName=select_box, isHideInSearch=true -->
+                    <!-- 备注 , notes ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('备注')}" class="search-label notes-label">备注</span><span class="search-colon">:</span></div>
+                        <input id="notes" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
 
 
                 </div>
@@ -77,15 +76,19 @@
 <!-- 表格工具栏 -->
 <script type="text/html" id="toolbarTemplate">
     <div class="layui-btn-container">
+        <button th:if="${perm.checkAuth('eam_operate:create')}" id="add-button" class="layui-btn icon-btn layui-btn-sm create-new-button" lay-event="create"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('新建')}">新建</span></button>
+        <button th:if="${perm.checkAuth('eam_operate:delete-by-ids')}" id="delete-button" class="layui-btn icon-btn layui-btn-danger layui-btn-sm batch-delete-button" lay-event="batch-del"><i class="layui-icon">&#xe67e;</i><span th:text="${lang.translate('删除')}">删除</span></button>
     </div>
 </script>
 
 <!-- 表格操作列 -->
 <script type="text/html" id="tableOperationTemplate">
 
-    <button th:if="${perm.checkAuth('eam_asset_data_change:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs ops-view-button" lay-event="view" th:text="${lang.translate('查看')}" data-id="{{d.id}}">查看</button>
+    <button th:if="${perm.checkAuth('eam_operate:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs ops-view-button" lay-event="view" th:text="${lang.translate('查看')}" data-id="{{d.id}}">查看</button>
+    <button th:if="${perm.checkAnyAuth('eam_operate:update','eam_operate:save')}" class="layui-btn layui-btn-primary layui-btn-xs ops-edit-button" lay-event="edit" th:text="${lang.translate('修改')}" data-id="{{d.id}}">修改</button>
 
 
+    <button th:if="${perm.checkAuth('eam_operate:delete')}" class="layui-btn layui-btn-xs layui-btn-danger ops-delete-button" lay-event="del" th:text="${lang.translate('删除')}" data-id="{{d.id}}">删除</button>
 
 
 </script>
@@ -93,14 +96,15 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${pageHelper.getTableColumnWidthConfig('data-table')}]];
-    var SELECT_BUSINESSTYPE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.CodeModuleEnum')}]];
-    var AUTH_PREFIX="eam_asset_data_change";
+    var SELECT_OPERATECODE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.CodeModuleEnum')}]];
+    var SELECT_APPROVAL_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.StatusYNEnum')}]];
+    var AUTH_PREFIX="eam_operate";
 
 
 </script>
 
-<script th:src="'/business/eam/asset_data_change/asset_data_change_ext.js?'+${cacheKey}"></script>
-<script th:src="'/business/eam/asset_data_change/asset_data_change_list.js?'+${cacheKey}"></script>
+<script th:src="'/business/eam/operate/operate_ext.js?'+${cacheKey}"></script>
+<script th:src="'/business/eam/operate/operate_list.js?'+${cacheKey}"></script>
 
 </body>
 </html>
