--- a/eam/common/generator/src/main/resources/templates/ControllerProxy.java.vm
+++ b/eam/common/generator/src/main/resources/templates/ControllerProxy.java.vm
@@ -66,7 +66,7 @@ public interface #(simpleName) {
 	 * 获取多个#(topic)
 	 */
 	public static final String GET_BY_IDS = API_PREFIX + "get-by-ids";
-	#end;
+	#end
 
 	/**
 	 * 查询#(topic)
