--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_column.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_column.html
@@ -75,7 +75,7 @@
     <div class="layui-form-label layui-form-label-c1"><div th:text="${item.attribute.label}"></div><div th:if="${item.required} == 1" class="layui-required">*</div></div>
 
     <div class="layui-input-block layui-input-block-c1">
-        <input lay-filter="asset_code" id="assetCode" name="asset_code" th:placeholder="${ lang.translate('系统自动生成') }" type="text" class="layui-input"   />
+        <input lay-filter="asset_code" id="assetCode" name="assetCode" th:placeholder="${ lang.translate('系统自动生成') }" type="text" class="layui-input"   />
     </div>
 </div>
 
