--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_data_change/asset_data_change_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_data_change/asset_data_change_list.html
@@ -95,6 +95,7 @@
     var LAYUI_TABLE_WIDTH_CONFIG = [[${pageHelper.getTableColumnWidthConfig('data-table')}]];
     var SELECT_BUSINESSTYPE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.CodeModuleEnum')}]];
     var AUTH_PREFIX="eam_asset_data_change";
+    var ASSET_ID = [[${assetId}]];
 
 
 </script>
