--- a/eam/view/view-ops/src/main/resources/public/business/ops/host/host_list.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/host/host_list.html
@@ -2,7 +2,7 @@
 /**
  * 主机 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-09-26 11:16:53
+ * @since 2021-09-29 11:01:56
  */
  -->
  <!DOCTYPE html>
@@ -54,7 +54,7 @@
                     <!-- 数据库使用用户 , userDbUsed ,typeName=text_input, isHideInSearch=true -->
                     <!-- 应用使用用户 , userAppUsed ,typeName=text_input, isHideInSearch=true -->
                     <!-- 运维操作用户 , userOpsOper ,typeName=text_input, isHideInSearch=true -->
-                    <!-- 其他用户 , userOther ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 其他用户 , userOther ,typeName=text_area, isHideInSearch=true -->
                     <!-- 改密策略 , passwordStrategyId ,typeName=select_box, isHideInSearch=true -->
                     <!-- 下线时间 , offlineTime ,typeName=date_input, isHideInSearch=true -->
                     <!-- 上线时间 , onlineTime ,typeName=date_input, isHideInSearch=true -->
