--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_form.html
@@ -2,7 +2,7 @@
 /**
  * 资产 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-09-26 17:26:53
+ * @since 2021-09-30 10:14:27
  */
  -->
  <!DOCTYPE html>
@@ -181,6 +181,15 @@
                     </div>
 
 
+                
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('安全等级')}">安全等级</div></div>
+                        <div class="layui-input-block layui-input-block-c1">
+                            <div id="safetyLevelCode" input-type="select" th:data="${'/service-system/sys-dict-item/query-list?dictCode=eam_safety_level'}"></div>
+                        </div>
+                    </div>
+
+
                                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('序列号')}">序列号</div></div>
                         <div class="layui-input-block layui-input-block-c1">
@@ -265,9 +274,9 @@
 
                 
                     <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('剩余数量')}">剩余数量</div></div>
+                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('剩余数量')}">剩余数量</div><div class="layui-required">*</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="remainNumber" id="remainNumber" name="remainNumber" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('剩余数量') }" type="text" class="layui-input"   autocomplete="off" input-type="number_input" integer="true" decimal="false" allow-negative="false" step="1.0"   scale="0" />
+                            <input lay-filter="remainNumber" id="remainNumber" name="remainNumber" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('剩余数量') }" type="text" class="layui-input"    lay-verify="|required"   autocomplete="off" input-type="number_input" integer="true" decimal="false" allow-negative="false" step="1.0"   scale="0" />
                         </div>
                     </div>
 
@@ -323,6 +332,15 @@
                             <input lay-filter="maintainerName" id="maintainerName" name="maintainerName" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('维保厂商') }" type="text" class="layui-input"  />
                         </div>
                     </div>
+
+                
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('维保状态')}">维保状态</div></div>
+                        <div class="layui-input-block layui-input-block-c1">
+                            <div id="maintenanceStatus" input-type="select" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetMaintenanceStatusEnum')}"></div>
+                        </div>
+                    </div>
+
 
                                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('联系人')}">联系人</div></div>
@@ -482,12 +500,14 @@
                         </div>
                     </div>
 
-                                    <div class="layui-form-item" >
+                
+                    <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('设备状态')}">设备状态</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="equipmentStatus" id="equipmentStatus" name="equipmentStatus" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('设备状态') }" type="text" class="layui-input"  />
+                            <div id="equipmentStatus" input-type="select" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetEquipmentStatusEnum')}"></div>
                         </div>
                     </div>
+
 
                                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('设备IP')}">设备IP</div></div>
@@ -516,6 +536,31 @@
                             <input lay-filter="equipmentMemory" id="equipmentMemory" name="equipmentMemory" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('设备内存') }" type="text" class="layui-input"  />
                         </div>
                     </div>
+
+                                    <div class="layui-form-item" >
+                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('设备标签')}">设备标签</div></div>
+                        <div class="layui-input-block layui-input-block-c1">
+                            <input lay-filter="equipmentLabel" id="equipmentLabel" name="equipmentLabel" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('设备标签') }" type="text" class="layui-input"  />
+                        </div>
+                    </div>
+
+                
+                    <div class="layui-form-item" >
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('设备配置')}">设备配置</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
+                        <textarea lay-filter="equipmentConf" id="equipmentConf" name="equipmentConf" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('设备配置') }" class="layui-textarea" style="height: 120px" ></textarea>
+                    </div>
+                </div>
+
+
+                
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('运行环境')}">运行环境</div></div>
+                        <div class="layui-input-block layui-input-block-c1">
+                            <div id="equipmentEnvironmentCode" input-type="select" th:data="${'/service-system/sys-dict-item/query-list?dictCode=eam_equipment_environment'}"></div>
+                        </div>
+                    </div>
+
 
                                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('设备机柜')}">设备机柜</div></div>
@@ -583,7 +628,9 @@
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
     var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
     var SELECT_ASSETSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetStatusEnum')}]];
-    var VALIDATE_CONFIG={"purchaseDate":{"date":true,"labelInForm":"采购日期","inputType":"date_input"},"maintenanceEndDate":{"date":true,"labelInForm":"结束时间","inputType":"date_input"},"entryTime":{"date":true,"labelInForm":"入账时间","inputType":"date_input"},"maintenanceStartDate":{"date":true,"labelInForm":"开始时间","inputType":"date_input"},"categoryId":{"labelInForm":"资产分类","inputType":"select_box","required":true}};
+    var SELECT_MAINTENANCESTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetMaintenanceStatusEnum')}]];
+    var SELECT_EQUIPMENTSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetEquipmentStatusEnum')}]];
+    var VALIDATE_CONFIG={"purchaseDate":{"date":true,"labelInForm":"采购日期","inputType":"date_input"},"maintenanceEndDate":{"date":true,"labelInForm":"结束时间","inputType":"date_input"},"entryTime":{"date":true,"labelInForm":"入账时间","inputType":"date_input"},"remainNumber":{"labelInForm":"剩余数量","inputType":"number_input","required":true},"maintenanceStartDate":{"date":true,"labelInForm":"开始时间","inputType":"date_input"},"categoryId":{"labelInForm":"资产分类","inputType":"select_box","required":true}};
     var AUTH_PREFIX="eam_asset";
 
 
