--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_info_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_info_form.html
@@ -157,7 +157,10 @@
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
     var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
     var SELECT_ASSETSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetStatusEnum')}]];
-    var SELECT_SOURCEID_DATA = [[${dict.toArray('eam_source')}]];
+    var SELECT_EQUIPMENTSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetEquipmentStatusEnum')}]];
+    var SELECT_MAINTENANCESTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetMaintenanceStatusEnum')}]];
+
+    // var SELECT_SOURCEID_DATA = [[${dict.toArray('eam_source')}]];
     var AUTH_PREFIX="eam_asset";
     var VALIDATE_CONFIG =  [[${attributeRequiredData}]];
 
