--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_info_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_info_form.html
@@ -66,7 +66,19 @@
                                 </div>
                             </div>
                         </div>
+
+
+
+                        <div id="pcmExtColumn">
+
+                        </div>
+
+
+
                     </div>
+
+
+
                     <div class="layui-tab-item ">
                         <!--开始：3栏模式 循环-->
                         <div class="layui-row form-row" >
@@ -125,6 +137,10 @@
                         </div>
 
                     </div>
+
+
+
+
                 </div>
             </div>
 
