--- a/eam/view/view-ops/src/main/resources/public/business/ops/information_system/information_system_form.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/information_system/information_system_form.html
@@ -2,7 +2,7 @@
 /**
  * 信息系统 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-09-26 12:15:15
+ * @since 2021-10-01 07:37:21
  */
  -->
  <!DOCTYPE html>
@@ -43,12 +43,12 @@
             <div class="layui-col-xs4 form-column">
 
 
-                <div class="layui-form-item" >
-                    <div class="layui-form-label "><div th:text="${lang.translate('状态')}">状态</div><div class="layui-required">*</div></div>
-                    <div class="layui-input-block ">
-                        <input input-type="radio" type="radio" name="status" lay-filter="status" th:each="e,stat:${dict.toArray('ops_system_status')}" th:value="${e.code}" th:title="${e.text}"  th:checked="${(e.code=='' || stat.index==0)?'yes':'no'}">
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('状态')}">状态</div></div>
+                        <div class="layui-input-block ">
+                            <div id="status" input-type="select" th:data="${'/service-system/sys-dict-item/query-list?dictCode=ops_system_status'}"></div>
+                        </div>
                     </div>
-                </div>
 
 
                                     <div class="layui-form-item" >
@@ -62,7 +62,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('系统分级')}">系统分级</div></div>
                         <div class="layui-input-block ">
-                            <div id="grade" input-type="select" th:data="${dict.toArray('ops_system_grade')}"></div>
+                            <div id="grade" input-type="select" th:data="${'/service-system/sys-dict-item/query-list?dictCode=ops_system_grade'}"></div>
                         </div>
                     </div>
 
@@ -156,7 +156,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('运维模式')}">运维模式</div></div>
                         <div class="layui-input-block ">
-                            <div id="opsMethod" input-type="select" th:data="${dict.toArray('ops_system_ops_method')}"></div>
+                            <div id="opsMethod" input-type="select" th:data="${'/service-system/sys-dict-item/query-list?dictCode=ops_system_ops_method'}"></div>
                         </div>
                     </div>
 
@@ -165,7 +165,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('开发模式')}">开发模式</div></div>
                         <div class="layui-input-block ">
-                            <div id="devMethod" input-type="select" th:data="${dict.toArray('ops_system_dev_method')}"></div>
+                            <div id="devMethod" input-type="select" th:data="${'/service-system/sys-dict-item/query-list?dictCode=ops_system_dev_method'}"></div>
                         </div>
                     </div>
 
@@ -270,11 +270,7 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
-    var RADIO_STATUS_DATA = [[${dict.toArray('ops_system_status')}]];
-    var SELECT_OPSMETHOD_DATA = [[${dict.toArray('ops_system_ops_method')}]];
-    var SELECT_DEVMETHOD_DATA = [[${dict.toArray('ops_system_dev_method')}]];
-    var SELECT_GRADE_DATA = [[${dict.toArray('ops_system_grade')}]];
-    var VALIDATE_CONFIG={"onlineDate":{"date":true,"labelInForm":"上线时间","inputType":"date_input"},"offlineDate":{"date":true,"labelInForm":"下线时间","inputType":"date_input"},"lastdrillDate":{"date":true,"labelInForm":"演练时间","inputType":"date_input"},"name":{"labelInForm":"名称","inputType":"text_input","required":true},"status":{"labelInForm":"状态","inputType":"radio_box","required":true}};
+    var VALIDATE_CONFIG={"onlineDate":{"date":true,"labelInForm":"上线时间","inputType":"date_input"},"offlineDate":{"date":true,"labelInForm":"下线时间","inputType":"date_input"},"lastdrillDate":{"date":true,"labelInForm":"演练时间","inputType":"date_input"},"name":{"labelInForm":"名称","inputType":"text_input","required":true}};
     var AUTH_PREFIX="ops_information_system";
 
 
