--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_column.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_column.html
@@ -15,7 +15,7 @@
 <div  th:fragment="category_id" class="layui-form-item" >
     <div class="layui-form-label layui-form-label-c1"><div th:text="${item.attribute.label}"></div><div th:if="${item.required} == 1" class="layui-required">*</div></div>
     <div class="layui-input-block layui-input-block-c1">
-        <div id="categoryId" input-type="select" th:data="${'/service-pcm/pcm-catalog/query-nodes'}"></div>
+        <div id="categoryId" input-type="select" ></div>
     </div>
 </div>
 
