--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_info_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_info_list.html
@@ -28,10 +28,7 @@
 <div class="layui-card">
 
     <div class="layui-card-body" style="">
-
         <div class="search-bar" style="">
-
-
             <div class="search-input-rows" style="opacity: 0">
                 <!-- 搜索输入区域 -->
                 <div class="layui-form toolbar search-inputs">
@@ -66,9 +63,13 @@
                 <div class="layui-form toolbar search-inputs">
                     <!-- 名称 , name ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('名称')}" class="search-label name-label">名称</span><span class="search-colon">:</span></div>
-                        <input id="name" class="layui-input search-input" style="width: 140px" type="text" />
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('资产分类')}" class="search-label name-label">资产分类</span><span class="search-colon">:</span></div>
+                        <div id="categoryId" input-type="select" style="width:140px"></div>
                     </div>
+<!--                    <div class="search-unit">-->
+<!--                        <div class="search-label-div" style=""><span th:text="${lang.translate('名称')}" class="search-label name-label">名称</span><span class="search-colon">:</span></div>-->
+<!--                        <input id="name" class="layui-input search-input" style="width: 140px" type="text" />-->
+<!--                    </div>-->
                     <!-- 规格型号 , model ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style=""><span th:text="${lang.translate('规格型号')}" class="search-label model-label">规格型号</span><span class="search-colon">:</span></div>
@@ -180,18 +181,17 @@
     <div class="layui-btn-container">
         <button th:if="${perm.checkAuth('eam_asset:create')}" id="add-button" class="layui-btn icon-btn layui-btn-sm create-new-button" lay-event="create"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('新建')}">新建</span></button>
         <button th:if="${perm.checkAuth('eam_asset:delete-by-ids')}" id="delete-button" class="layui-btn icon-btn layui-btn-danger layui-btn-sm batch-delete-button" lay-event="batch-del"><i class="layui-icon">&#xe67e;</i><span th:text="${lang.translate('删除')}">删除</span></button>
-
-
+        <button th:if="${perm.checkAuth('eam_asset:for-batch-approval')}"  id="forBatchApproval-button" class="layui-btn icon-btn  layui-btn-sm " lay-event="forBatchApproval"> <span th:text="${lang.translate('送审')}">送审</span></button>
+        <button th:if="${perm.checkAuth('eam_asset:high-export-data')}"  id="highExportData-button" class="layui-btn icon-btn layui-btn-sm" lay-event="highExportData"><span th:text="${lang.translate('数据导出')}">数据导出</span></button>
     </div>
 </script>
 
 <!-- 表格操作列 -->
 <script type="text/html" id="tableOperationTemplate">
-
     <button th:if="${perm.checkAuth('eam_asset:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs ops-view-button" lay-event="view" th:text="${lang.translate('查看')}" data-id="{{d.id}}">查看</button>
     <button th:if="${perm.checkAnyAuth('eam_asset:update','eam_asset:save')}" class="layui-btn layui-btn-primary layui-btn-xs ops-edit-button" lay-event="edit" th:text="${lang.translate('修改')}" data-id="{{d.id}}">修改</button>
     <button th:if="${perm.checkAuth('eam_asset:delete')}" class="layui-btn layui-btn-xs layui-btn-danger ops-delete-button" lay-event="del" th:text="${lang.translate('删除')}" data-id="{{d.id}}">删除</button>
-    <button class="layui-btn layui-btn-xs " lay-event="asset-data-change" th:text="${lang.translate('变更')}" data-id="{{d.id}}">变更</button>
+    <button class="layui-btn layui-btn-xs " lay-event="asset-data-change" th:text="${lang.translate('变更')}" data-id="{{d.id}}">变更明细</button>
 </script>
 
 
@@ -203,7 +203,8 @@
     var SELECT_EQUIPMENTSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetEquipmentStatusEnum')}]];
     var SELECT_MAINTENANCESTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetMaintenanceStatusEnum')}]];
 
-    // var SELECT_SOURCEID_DATA = [[${dict.toArray('eam_source')}]];
+
+    var ASSET_CATEGORY_DATA =  [[${assetCategoryData}]];
 
     var AUTH_PREFIX="eam_asset";
     var ATTRIBUTE_LIST_DATA =  [[${attributeListData}]];
