--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_scrap/asset_scrap_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_scrap/asset_scrap_list.html
@@ -2,7 +2,7 @@
 /**
  * 资产报废 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-09-26 11:15:16
+ * @since 2021-10-04 23:20:04
  */
  -->
  <!DOCTYPE html>
@@ -111,6 +111,7 @@
 
     <button th:if="${perm.checkAuth('eam_asset_scrap:delete')}" class="layui-btn layui-btn-xs layui-btn-danger ops-delete-button" lay-event="del" th:text="${lang.translate('删除')}" data-id="{{d.id}}">删除</button>
 
+    <button class="layui-btn layui-btn-xs " lay-event="for-approval" th:text="${lang.translate('送审')}" data-id="{{d.id}}">送审</button>
     <button class="layui-btn layui-btn-xs " lay-event="download-bill" th:text="${lang.translate('单据')}" data-id="{{d.id}}">单据</button>
 
 </script>
