--- a/eam/common/generator/src/main/resources/templates/ApiController.java.vm
+++ b/eam/common/generator/src/main/resources/templates/ApiController.java.vm
@@ -1,6 +1,6 @@
 package #(package);
 
- 
+
 import java.util.List;
 
 import org.springframework.web.bind.annotation.RestController;
@@ -31,7 +31,7 @@ public class #(simpleName) extends SuperController {
 	@Autowired
 	private #(serviceSimpleName) #(serviceVarName);
 
-	
+
 	/**
 	 * 添加#(topic)
 	*/
@@ -49,7 +49,25 @@ public class #(simpleName) extends SuperController {
 		return result;
 	}
 
-	
+	#if(batchInsert)
+	/**
+	 * 批量添加#(topic)
+	*/
+	#if(isEnableSwagger)
+	#(swager4Insert)
+	@ApiOperationSupport(order=1)
+	#end
+	#if(isEnableMicroService)
+	@SentinelResource(value = #(agentSimpleName).INSERTS , blockHandlerClass = { SentinelExceptionUtil.class } , blockHandler = SentinelExceptionUtil.HANDLER )
+	#end
+	@PostMapping(#(agentSimpleName).INSERTS)
+	public Result insert(List<#(voSimpleName)> #(voVarName)s) {
+		Result result=#(serviceVarName).insertList(new ArrayList<>(#(voVarName)s));
+		return result;
+	}
+	#end
+
+
 	/**
 	 * 删除#(topic)
 	*/
@@ -66,8 +84,8 @@ public class #(simpleName) extends SuperController {
 		Result result=#(serviceVarName).#(implMethod4DeleteById)(#(controllerMethodParameterPassIn4DeleteById));
 		return result;
 	}
-	
-	
+
+
 	#if(isSimplePk)
 	/**
 	 * 批量删除#(topic) <br>
@@ -85,17 +103,17 @@ public class #(simpleName) extends SuperController {
 	#end
 	@PostMapping(#(agentSimpleName).DELETE_BY_IDS)
 	public Result deleteByIds(List<#(idsPropertyType)> #(idsPropertyName)) {
-		Result result=#(serviceVarName).deleteByIdsLogical(#(idsPropertyName));
+		Result result=#(serviceVarName).#(implMethod4DeleteByIds)(#(idsPropertyName));
 		return result;
 	}
 	#end
-	
+
 	/**
 	 * 更新#(topic)
 	*/
 	#if(isEnableSwagger)
 	#(swager4Update)
-	@ApiOperationSupport( order=4 , ignoreParameters = { #(ignoreParameters4Update) } ) 
+	@ApiOperationSupport( order=4 , ignoreParameters = { #(ignoreParameters4Update) } )
 	#end
 	#(validation4Update)
 	#if(isEnableMicroService)
@@ -103,11 +121,11 @@ public class #(simpleName) extends SuperController {
 	#end
 	@PostMapping(#(agentSimpleName).UPDATE)
 	public Result update(#(voSimpleName) #(voVarName)) {
-		Result result=#(serviceVarName).update(#(voVarName),SaveMode.NOT_NULL_FIELDS);
+		Result result=#(serviceVarName).update(#(voVarName),SaveMode.#(saveMode));
 		return result;
 	}
-	
-	
+
+
 	/**
 	 * 保存#(topic)
 	*/
@@ -121,11 +139,11 @@ public class #(simpleName) extends SuperController {
 	#end
 	@PostMapping(#(agentSimpleName).SAVE)
 	public Result save(#(voSimpleName) #(voVarName)) {
-		Result result=#(serviceVarName).save(#(voVarName),SaveMode.NOT_NULL_FIELDS);
+		Result result=#(serviceVarName).save(#(voVarName),SaveMode.#(saveMode));
 		return result;
 	}
 
-	
+
 	/**
 	 * 获取#(topic)
 	*/
@@ -177,7 +195,7 @@ public class #(simpleName) extends SuperController {
 	}
 	#end
 
-	
+
 	/**
 	 * 查询#(topic)
 	*/
@@ -196,7 +214,7 @@ public class #(simpleName) extends SuperController {
 		return result;
 	}
 
-	
+
 	/**
 	 * 分页查询#(topic)
 	*/
