--- a/eam/common/generator/src/main/resources/templates/ControllerProxy.java.vm
+++ b/eam/common/generator/src/main/resources/templates/ControllerProxy.java.vm
@@ -12,27 +12,33 @@ import org.github.foxnic.web.proxy.FeignConfiguration;
 
 #if(isEnableMicroService)@FeignClient(value = #(msNameConst), contextId = #(simpleName).API_CONTEXT_PATH , configuration = FeignConfiguration.class)#end
 public interface #(simpleName) {
-	
+
 	/**
 	 * 基础路径 , #(apiBasicPath)
 	*/
 	public static final String API_BASIC_PATH = "#(apiBasicPath)";
-	
+
 	/**
 	 * API 上下文路径 , #(apiContextPath)
 	*/
 	public static final String API_CONTEXT_PATH = "#(apiContextPath)";
-	
+
 	/**
 	 * API 基础路径 , 由 API_BASIC_PATH 和 API_CONTEXT_PATH 两部分组成
 	*/
 	public static final String API_PREFIX = "/" + API_BASIC_PATH + "/"+API_CONTEXT_PATH+"/";
-	
+
 	/**
 	 * 添加#(topic)
 	 */
 	public static final String INSERT = API_PREFIX + "insert";
-	
+
+	#if(batchInsert)
+	/**
+	 * 批量添加#(topic)
+	 */
+	public static final String INSERTS = API_PREFIX + "inserts";
+	#end;
 	/**
 	 * 删除#(topic)
 	 */
@@ -44,18 +50,18 @@ public interface #(simpleName) {
 	 */
 	public static final String DELETE_BY_IDS = API_PREFIX + "delete-by-ids";
 	#end
-	
+
 	/**
 	 * 更新#(topic)
 	 */
 	public static final String UPDATE = API_PREFIX + "update";
-	
-	
+
+
 	/**
 	 * 保存#(topic)
 	 */
 	public static final String SAVE = API_PREFIX + "save";
-	
+
 	/**
 	 * 获取单个#(topic)
 	 */
@@ -72,12 +78,12 @@ public interface #(simpleName) {
 	 * 查询#(topic)
 	 */
 	public static final String QUERY_LIST = API_PREFIX + "query-list";
-	
+
 	/**
 	 * 分页查询#(topic)
 	 */
 	public static final String QUERY_PAGED_LIST = API_PREFIX + "query-paged-list";
-	
+
 	/**
 	 * 导出#(topic)数据(Excel)
 	 */
@@ -87,18 +93,18 @@ public interface #(simpleName) {
 	 * 下载#(topic)导入模版(Excel)
 	 */
 	public static final String EXPORT_EXCEL_TEMPLATE = API_PREFIX + "export-excel-template";
-	
+
 	/**
 	 * 导入#(topic)数据(Excel)
 	 */
 	public static final String IMPORT_EXCEL = API_PREFIX + "import-excel";
-	
+
 	/**
 	 * 添加#(topic)
 	*/
 	@RequestMapping(#(agentSimpleName).INSERT)
 	Result insert(#(voSimpleName) #(voVar));
-	
+
 	/**
 	 * 删除#(topic)
 	*/
@@ -118,13 +124,13 @@ public interface #(simpleName) {
 	*/
 	@RequestMapping(#(agentSimpleName).UPDATE)
 	Result update(#(voSimpleName) #(voVar));
-	
+
 	/**
 	 * 更新#(topic)
 	*/
 	@RequestMapping(#(agentSimpleName).SAVE)
 	Result save(#(voSimpleName) #(voVar));
-	
+
 	/**
 	 * 获取#(topic)
 	*/
@@ -143,14 +149,14 @@ public interface #(simpleName) {
 	*/
 	@RequestMapping(#(agentSimpleName).QUERY_LIST)
 	Result<List<#(poSimpleName)>> queryList(#(voSimpleName) sample);
-	
+
 	/**
 	 * 分页查询#(topic)
 	*/
 	@RequestMapping(#(agentSimpleName).QUERY_PAGED_LIST)
 	Result<PagedList<#(poSimpleName)>> queryPagedList(#(voSimpleName) sample);
-	
-	
+
+
 	/**
 	 * 控制器类名
 	 * */
